# cascade-query

./: .coverage  .gitignore  AGENTS.md  README.md  REQUIREMENTS_TRACEABILITY.md  coverage.json  pyproject.toml  readme.md
.cursor/: environment.json
.cursor/scripts/: install.sh  start.sh
.github/workflows/: ci.yml  nightly-performance.yml  workflow.yml
benchmarks/: __init__.py  performance_suite.py
docs/: mutation_triage.md
docs/formal/: README.md  cascade_core.cfg  cascade_core.tla
examples/: asset_build_graph_incremental_planner.py  compiler.py  compiler_dsl_transpiler_live_diagnostics.py  compiler_pipeline.py  compute_many_with_accumulators.py  concurrent_background_work.py  data_pipeline.py  derived_analytics_metric_compiler.py  dynamic_macro_expansion.py  feature_flag_entitlement_resolution_engine.py  feature_flags.py  gil_parallel_speedup.py  incremental_ide_analysis_pipeline.py  incremental_static_analyzer_security_scanner.py  large_rules_engine_concurrent_duplicate_requests.py  monorepo_impacted_test_planner.py  persistence_and_inspection.py  policy_as_code_iac_evaluator.py  query_engine_stats.py  schema_compatibility_migration_impact_checker.py  snapshot_isolation.py
scripts/: mutation_fast.sh
src/cascade/: INTERNAL_ARCHITECTURE.md  __init__.py  _errors.py  _evaluator.py  _graph_export.py  _persistence.py  _runtime.py  _scheduler.py  _serde.py  _state.py  _store.py  _synthetic_graph.py  engine.py
tests/: scale_helpers.py  test_dependency_parallelism.py  test_engine.py  test_engine_compute_many.py  test_engine_concurrency.py  test_engine_persistence_and_tracing.py  test_evaluator_and_synthetic_coverage.py  test_examples.py  test_internal_invariants.py  test_performance.py  test_repro_touch_memo_keyerror.py  test_scale_behavior.py  test_serde.py  test_stateful_engine_invariants.py  test_subgraph_stats_export.py
