[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "query-cascade"
version = "0.1.0"
description = "Minimal demand-driven query framework for incremental computation."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-m", "not slow"]
markers = [
    "slow: resource-intensive scale and stress scenarios",
]

[tool.coverage.run]
branch = true
source = ["cascade"]

[tool.coverage.report]
skip_covered = false
show_missing = true
