[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "query-cascade"
version = "0.1.0"
description = "Minimal demand-driven query framework for incremental computation."
requires-python = ">=3.12"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "hypothesis",
    "mutmut",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-m", "not slow"]
markers = [
    "slow: resource-intensive scale and stress scenarios",
]

[tool.coverage.run]
branch = true
source = ["cascade"]

[tool.coverage.report]
skip_covered = false
show_missing = true

[tool.mutmut]
paths_to_mutate = ["src/cascade/"]
tests_dir = ["tests/"]
runner = "python -m pytest -q -m \"not slow\" --ignore=tests/test_performance.py"
mutate_only_covered_lines = true
also_copy = ["pyproject.toml", "benchmarks"]
